fixed spacing

--- a/css/font-awesome.css
+++ b/css/font-awesome.css
@@ -388,6 +388,7 @@
 }
 .fa-check-square-o:before {
   content: "\f046";
+  margin-right: 10px;
 }
 .fa-arrows:before {
   content: "\f047";
